--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
    </head>
    <body>
       <h1 align="center"><img src="https://nitw.ac.in/images/NITW_logo_telugu3.png"> </img></h1>
-      <a href=""><img src="home.png" style="position: relative; top:10px;"></img> </a><a href="">Institute</a> <a href=""> Administration </a>  <a href=""> Academics </a> <a href=""> R&D </a> <a href=""> Alumni </a>
+      <a href=""><img src="home.PNG" style="position: relative; top:10px;"></img> </a><a href="">Institute</a> <a href=""> Administration </a>  <a href=""> Academics </a> <a href=""> R&D </a> <a href=""> Alumni </a>
        <hr color="blue"/>
        <marquee>  <img src="https://nitw.ac.in/api/static/files/MoU_Exchanged_Between_NIT_Warangal_and_Ni-MSME_2024-2-21-17-58-20.jpg"></img>  <img src="https://nitw.ac.in/api/static/files/ICSPER_conference_inauguration_2024-3-2-11-19-25.jpg"></img></marquee>
       <hr color="blue"/>
-      <marquee><img src="bullet-new.png" class="new"></img>Sem result out</marquee> 
+      <marquee><img src="bullet-new.PNG" class="new"></img>Sem result out</marquee> 
       <hr color="blue"/>  
       <span  class = "news">
          <h1> Upcoming events </h1>
@@ -67,9 +67,9 @@
       <div class="notices">
          <h1 style="color:black">Notices</h1>
          <hr style="width:100px; position:relative; right:180px;"/>
-         <h2>Book Fair 2025 <img src="speaker.png"></img></h2>
+         <h2>Book Fair 2025 <img src="speaker.PNG"></img></h2>
          <h3>Book Fair - 2025 (30-31 Jan 2025)</h3>
-         <h2> Submission of Annual Life Certificate by pensioners/family pension-Status of receipt as of 10.12.2024 <img src="speaker.png"></img></h2>
+         <h2> Submission of Annual Life Certificate by pensioners/family pension-Status of receipt as of 10.12.2024 <img src="speaker.PNG"></img></h2>
       </div>
        <h1 align="center" style="color:green;"> Campus Life photos </h1>
       <div class="photos">
